Swagger UI with multiple Input parameters.
